add api catalog

--- a/siteConfig.yaml
+++ b/siteConfig.yaml
@@ -27,6 +27,9 @@ stylesheets:
 #  - ./static/intercom.js
 nav:
 
+  - label: API Catalog
+    page: apis.mdx
+
   - label: Training exercises
     page: developer-portal/index.md
 
